# task

./: .example.env  Dockerfile  READMY.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pylint.yml  testing.yml
migrations/: env.py
migrations/versions/: 32a3e53a16f0_update_user_model.py  ab5191e64135_initial_migration.py
src/: __init__.py  database.py  main.py  models.py  schemas.py
src/core/: config.py
src/repository/: task.py  user.py
src/routers/: tasks.py  users.py
src/services/: auth.py  log.py  password_hasher.py
src/services/token_handler/: manager.py  types.py
src/services/token_handler/strategies/: __init__.py  access_token.py  base_strategy.py  refresh_token.py
test/: conftest.py  test_auth.py  test_example.py  test_hash_password.py  test_task.py  test_token_handler.py
