[tool.poetry]
name = "task-project"
version = "0.1.0"
description = "managment task"
authors = ["dima cheban <dimacheban23@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
alembic = "^1.14.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
psycopg = "^3.2.5"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"
python-jose = "^3.4.0"
types-python-jose = "^3.4.0.20250224"
pytest-asyncio = "^0.25.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false 